# vaspparser

./: .coverage  .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.binder/: postBuild
.ci_support/: check.py  environment-docs.yml  environment-notebooks.yml  environment-old.yml  environment.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot.yml  deploy.yml  pipeline.yml  unittests.yml
docs/: conf.py  index.rst
notebooks/: version.ipynb
pyiron_vasp/: _version.py
pyiron_vasp/dft/: bader.py  volumetric.py
pyiron_vasp/dft/waves/: electronic.py
pyiron_vasp/vasp/: 2024_07_07_BenchmarkVaspParser_Cleaned.ipynb  output.py  procar.py  structure.py  vasprun.py  volumetric_data.py
pyiron_vasp/vasp/parser/: oszicar.py  outcar.py  report.py
src/vaspparser/: __init__.py
src/vaspparser/dft/: bader.py  volumetric.py
src/vaspparser/dft/waves/: electronic.py
src/vaspparser/vasp/: output.py  procar.py  structure.py  vasprun.py  volumetric_data.py
src/vaspparser/vasp/parser/: outcar.py
tests/dft/: test_bader.py  test_volumetric.py
tests/dft/waves/: test_dos.py  test_electronic.py  test_more_dos.py  test_more_electronic.py
tests/static/vasp_test_files/: PROCAR_for_test  REPORT_for_test
tests/static/vasp_test_files/bader_test/: total_charge.CUBE  valence_charge.CUBE
tests/static/vasp_test_files/corrupted_vasprun/: OUTCAR
tests/static/vasp_test_files/full_job_minor_glitch/: CONTCAR
tests/static/vasp_test_files/outcar_samples/: OUTCAR_11
tests/static/vasp_test_files/procar_test/: POSCAR  PROCAR
tests/unit/: test_tests.py
tests/vasp/: test_more_output.py  test_oszicar.py  test_outcar.py  test_output.py  test_procar.py  test_structure.py  test_vasprun.py  test_volumetric_data.py
tests/vasp/parser/: test_report.py
