[build-system]
requires = ["ase", "defusedxml", "matplotlib", "numpy", "pandas", "scipy", "hatchling==1.28.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "vaspparser"
description = "Parser for the Vienna Ab initio Simulation Package (VASP)"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ase==3.27.0",
    "defusedxml==0.7.1",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "scipy==1.17.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pyiron.org"
Documentation = "https://vaspparser.readthedocs.io"
Repository = "https://github.com/pyiron/vaspparser"

[project.optional-dependencies]
plot = [
    "matplotlib==3.10.8"
]

[tool.hatch.build]
include = [
    "src/vaspparser"
]

[tool.hatch.build.hooks.vcs]
version-file = "src/vaspparser/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/vaspparser"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/vaspparser"
]

[tool.hatch.version]
source = "vcs"
path = "src/vaspparser/_version.py"

[tool.coverage.run]
source = ["vaspparser"]
command_line = "-m unittest discover tests"
